# chamber-simulator-ui

./: .gitignore  DOE_MAITRISE.xlsx  DOE_MAITRISE_results.xlsx  DOE_MAITRISE_results_2.xlsx  README.md  github.txt  pyproject.toml  requirements.txt  test2.json  test3.json  ui_original.py  ui_v2.10.py  ui_v2.11.py  ui_v2.12.py  ui_v2.6.py  ui_v2.7.py  ui_v2.8.py  ui_v2.9.py  ui_v2.py
config/: Config_autour_sphere.json  config_1.json  config_reseau_antenne.json  config_tout_droite.json  test1.json
scripts/: doe_auto_run.py  doe_build_config.py  doe_preview.py  doe_run_once.py  doe_run_sheet.py  plot_ground_model_comparison.py  plot_ground_model_comparison_scientific.py  plot_ground_model_comparison_ui_native.py
src/chamber_sim/: experiment_runner.py  scene.py  viz3d.py
src/chamber_sim/doe/: __init__.py  analytics.py  config_builder.py  excel_io.py  manager.py  orchestrator.py  result_writer.py  runner.py  schemas.py
src/chamber_sim/er_ls/: __init__.py  config.py  energy.py  er_ls.py  er_ls_free_field.py  er_ls_ground.py  geometry.py  ground_model.py  viz.py
src/chamber_sim/er_nls/: __init__.py  config.py  er_nls.py  er_nls_ground.py
src/chamber_sim/mle_em/: __init__.py  config.py  ground_model.py  mle_em_ground.py
src/chamber_sim/noise/: __init__.py  add_noise.py
src/chamber_sim/propagation/: __init__.py  free_field.py
src/chamber_sim/signals/: __init__.py  source_signal.py
src/chamber_sim/tdoa/: __init__.py  denoise.py  gcc_phat.py  localization.py  localize_grid.py
